<resources>
    <string name="app_name">NicoFlick_A</string>
    <string name="nicoflick">NicoFlick</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="versionNum">Ver.1.10.a3</string>
    <string name="nicoM_account">ニコニコ動画 アカウント</string>
    <string name="usedMyAccount">自分のアカウントを使いたいときに入力</string>
    <string name="mail">Mail</string>
    <string name="pass">Pass</string>
    <string name="name">Name:</string>
    <string name="regist">登録</string>
    <string name="gameUser">ゲームユーザー</string>
    <string name="back">Back</string>
    <string name="userid_">UserID:</string>
    <string name="_go_">Go</string>
    <string name="_menu">menu</string>
    <string name="great">Great!!</string>
    <string name="good">Good!</string>
    <string name="safe">safe</string>
    <string name="bad">bad</string>
    <string name="miss">miss</string>
    <string name="title_activity_ranking_comment">RankingCommentActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SyokiGakkyoku">\@初期楽曲</string>
    <string name="hensyu">編集</string>
    <string name="starfilter">★フィルタ</string>
</resources>
