<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity_Settings">

    <TextView
            android:text="@string/userid_"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toTopOf="@+id/textView_uniqueUserID"
            app:layout_constraintBottom_toBottomOf="@+id/textView_uniqueUserID"
            app:layout_constraintVertical_bias="1.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_registName"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView8" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/button_registName" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/name"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toTopOf="@+id/edit_registName"
            app:layout_constraintBottom_toBottomOf="@+id/edit_registName"/>
    <TextView
            android:text="@string/gameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.1"
            android:layout_marginStart="24dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edit_Pass"
            app:layout_constraintStart_toEndOf="@+id/textView5" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_Mail" android:autofillHints=""
            android:inputType="textPassword" android:visibility="invisible"/>
    <TextView
            android:text="@string/pass"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toTopOf="@+id/edit_Pass" app:layout_constraintBottom_toBottomOf="@+id/edit_Pass"
            android:visibility="invisible"/>
    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar" app:title="Settings" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/nicoM_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.050000012"
            android:layout_marginStart="24dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:visibility="invisible"/>
    <TextView
            android:text="@string/usedMyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:visibility="invisible"/>
    <TextView
            android:text="@string/mail"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toTopOf="@+id/edit_Mail" app:layout_constraintBottom_toBottomOf="@+id/edit_Mail"
            android:visibility="invisible"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edit_Mail"
            app:layout_constraintStart_toEndOf="@+id/textView5" android:layout_marginStart="8dp"
            android:layout_marginTop="7dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:autofillHints=""
            android:visibility="invisible"/>
    <Button
            android:text="@string/regist"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_registName" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_registName"
            app:layout_constraintBottom_toBottomOf="@+id/edit_registName" android:onClick="Button_Regist"/>
    <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_back"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@android:color/holo_blue_dark" android:onClick="Button_Back"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_uniqueUserID"
            app:layout_constraintTop_toBottomOf="@+id/edit_registName" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/edit_registName"
            app:layout_constraintEnd_toEndOf="@+id/button_registName"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_circular"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:visibility="invisible"/>
    <Button
            android:text="ロードデータ削除"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_DataDelete" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp" android:alpha="0.2" android:onClick="ButtonLoadDataDelete"/>
</androidx.constraintlayout.widget.ConstraintLayout>