<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/title_SlashShade_layout"
            android:layout_marginBottom="-50px"
    >
    </FrameLayout>

    <com.mizushiki.nicoflick_a.DecolationLabel
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nicoflick"
            android:fontFamily="@font/nicokaku_v1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.215"
            android:textSize="50sp" android:id="@+id/textView2"
            android:textAlignment="center"
            android:textColor="#00A3CE"
            app:stroke_size="18"
            app:stroke_color="#FAFAFA"
            app:stroke_shadow_x="6.5"
            app:stroke_shadow_y="6.5"
            app:stroke_shadow_color="#D662A2"
    />
    <Button
            android:text="@string/start"
            android:layout_width="240dp"
            android:layout_height="55dp"
            android:id="@+id/button" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.7"
            style="@style/custom_button"
            android:onClick="Button_Start"
            android:textSize="26sp"
            android:background="@drawable/custom_button"
    />
    <Button
            android:text="@string/settings"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:id="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.25"
            style="@style/custom_button"
            android:onClick="Button_settings"
            android:textSize="14sp"
            android:background="@drawable/custom_button"
    />
    <TextView
            android:text="@string/versionNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintTop_toTopOf="parent"
            android:textColor="#BBB"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="1.0" android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"/>
    <Button
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/button3"
            android:background="@android:drawable/ic_dialog_info"
            android:backgroundTint="@android:color/holo_blue_dark" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="1.0" android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" android:onClick="Button_Info"/>
    <TextView
            android:text="デザイン協力募集中"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_designCoop"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="#FF8ADB"
            android:textSize="10sp"
            android:onClick="Label_designCoop"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/button3"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="1.0" android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"/>
    <ProgressBar
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="30dp"
            android:id="@+id/progress_circular"
            style="@android:style/Widget.Material.ProgressBar.Large" tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:id="@+id/View_keyboard_layout_dummy">
    </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:id="@+id/View_keyboard_layout">
    </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>