<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity_GameView">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:text=""
            android:id="@+id/editText"
            app:layout_constraintBottom_toBottomOf="@+id/playerView"
            app:layout_constraintEnd_toEndOf="@+id/playerView" app:layout_constraintStart_toStartOf="@+id/playerView"
            app:layout_constraintTop_toTopOf="@+id/playerView"/>
    <View
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:id="@+id/mekakushiView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/playerView"
            android:background="#FFF"/>
    <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="300dp" app:layout_constraintTop_toTopOf="parent"
            app:use_controller="false"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:background="@android:color/background_dark">
    </com.google.android.exoplayer2.ui.PlayerView>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView_HighScore"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            app:layout_constraintTop_toTopOf="@+id/notesWindow" app:layout_constraintStart_toStartOf="@+id/playerView"
            android:textSize="10sp" app:layout_constraintEnd_toEndOf="@+id/playerView"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            android:textColor="@android:color/white"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView_Score"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            app:layout_constraintEnd_toEndOf="@+id/playerView" app:layout_constraintTop_toTopOf="@+id/notesWindow"
            app:layout_constraintStart_toStartOf="@+id/playerView" android:textAlignment="viewEnd"
            android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
            android:textColor="@android:color/white"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView_judgeOffset"
            android:shadowColor="#000000"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            app:layout_constraintBottom_toBottomOf="@+id/playerView"
            app:layout_constraintEnd_toEndOf="@+id/playerView" app:layout_constraintStart_toStartOf="@+id/playerView"
            android:textSize="8sp" android:textAlignment="viewEnd" android:textColor="@android:color/white"/>
    <Button
            android:text="@string/_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_Menu"
            app:layout_constraintTop_toBottomOf="@+id/playerView" app:layout_constraintEnd_toEndOf="@+id/playerView"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" android:textColor="@android:color/darker_gray"
            android:textSize="12sp" app:layout_constraintBottom_toTopOf="@+id/noteBarView"
            android:onClick="menuButton" android:textAlignment="viewEnd"/>
    <View
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:id="@+id/noteBarView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/playerView"
            android:layout_marginTop="32dp" android:background="#E9FDBB"/>

    <ImageView
            android:src="@drawable/dot_circle"
            android:layout_width="36dp"
            android:layout_height="36dp" android:id="@+id/dotCircle"
            app:layout_constraintBottom_toBottomOf="@+id/noteBarView"
            app:layout_constraintTop_toTopOf="@+id/noteBarView"
            app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.4" android:visibility="invisible"/>
    <ImageView
            android:src="@drawable/circle"
            android:layout_width="40dp"
            android:layout_height="40dp" android:id="@+id/flickCircle"
            app:layout_constraintBottom_toBottomOf="@+id/noteBarView"
            app:layout_constraintTop_toTopOf="@+id/noteBarView"
            app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0"/>
    <TextView android:id="@+id/textView_Great1" android:text="@string/great" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#FF0080"/>
    <TextView android:id="@+id/textView_Great2" android:text="@string/great" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#FF0080"/>
    <TextView android:id="@+id/textView_Great3" android:text="@string/great" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#FF0080"/>
    <TextView android:id="@+id/textView_Great4" android:text="@string/great" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#FF0080"/>
    <TextView android:id="@+id/textView_Great5" android:text="@string/great" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#FF0080"/>

    <TextView android:id="@+id/textView_Good1" android:text="@string/good" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#0080FF"/>
    <TextView android:id="@+id/textView_Good2" android:text="@string/good" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#0080FF"/>
    <TextView android:id="@+id/textView_Good3" android:text="@string/good" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#0080FF"/>
    <TextView android:id="@+id/textView_Good4" android:text="@string/good" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#0080FF"/>
    <TextView android:id="@+id/textView_Good5" android:text="@string/good" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#0080FF"/>

    <TextView android:id="@+id/textView_Safe1" android:text="@string/safe" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#80FF00"/>
    <TextView android:id="@+id/textView_Safe2" android:text="@string/safe" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#80FF00"/>
    <TextView android:id="@+id/textView_Safe3" android:text="@string/safe" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#80FF00"/>
    <TextView android:id="@+id/textView_Safe4" android:text="@string/safe" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#80FF00"/>
    <TextView android:id="@+id/textView_Safe5" android:text="@string/safe" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#80FF00"/>

    <TextView android:id="@+id/textView_Bad1" android:text="@string/bad" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#808000"/>
    <TextView android:id="@+id/textView_Bad2" android:text="@string/bad" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#808000"/>
    <TextView android:id="@+id/textView_Bad3" android:text="@string/bad" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#808000"/>
    <TextView android:id="@+id/textView_Bad4" android:text="@string/bad" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#808000"/>
    <TextView android:id="@+id/textView_Bad5" android:text="@string/bad" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#808000"/>

    <TextView android:id="@+id/textView_Miss1" android:text="@string/miss" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#400080"/>
    <TextView android:id="@+id/textView_Miss2" android:text="@string/miss" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#400080"/>
    <TextView android:id="@+id/textView_Miss3" android:text="@string/miss" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#400080"/>
    <TextView android:id="@+id/textView_Miss4" android:text="@string/miss" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#400080"/>
    <TextView android:id="@+id/textView_Miss5" android:text="@string/miss" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="@+id/noteBarView" android:alpha="0.0" android:textColor="#400080"/>

    <TextView
            android:text="X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView_BarWord"
            app:layout_constraintBottom_toBottomOf="@+id/noteBarView"
            app:layout_constraintTop_toTopOf="@+id/noteBarView"
            android:textSize="28sp" app:layout_constraintStart_toEndOf="parent"/>
    <TextView
            android:text="99 combo"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView_combo"
            android:textStyle="bold|italic"
            android:visibility="invisible"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            app:layout_constraintBottom_toTopOf="@+id/textView_Great1"
            app:layout_constraintStart_toStartOf="@+id/textView_Great1" android:layout_marginBottom="4dp"/>
    <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="1000"
            android:id="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/noteBarView" android:progress="500"
            android:progressTint="@android:color/holo_blue_dark" android:layout_marginStart="96dp"
            android:layout_marginEnd="96dp"
            android:alpha="0.01"
    />
    <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="1000"
            android:id="@+id/progressBar2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noteBarView"
            android:layout_marginTop="25dp"
            android:progress="500"
            android:progressTint="@android:color/holo_blue_dark" android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:alpha="0.01"
    />
    <ProgressBar
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:id="@+id/progressBar_Loaded"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playerView" android:progressTint="?attr/colorButtonNormal"
            android:progressBackgroundTint="@color/design_default_color_background"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:id="@+id/progressBar_Played" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/playerView"
            android:progressTint="@android:color/holo_blue_dark"
            android:progressBackgroundTint="@color/design_default_color_background" android:max="100000"/>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/notesWindow">
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
